--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-506-tinker
                         <li><a href="#" class="scroll-link" data-id="experience">Experience</a></li>
                         <li><a href="#" class="scroll-link" data-id="portfolio">Portfolio</a></li>
                         <li><a href="#" class="scroll-link" data-id="photography">Photography</a></li>
-                        <li><a href="#" class="scroll-link" data-id="hobbies">Hobbies</a></li>
+                        <li><a href="#" class="scroll-link" data-id="blog">Blog</a></li>
                         <li><a href="#" class="scroll-link" data-id="contact">Contact</a></li>
                     </ul>
                 </div>
@@ -74,6 +74,7 @@ https://templatemo.com/tm-506-tinker
             <div class="row">
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <p>About Me:</p>
+                    <p><span>(links to more info)</span></p>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <a>MIT Sophomore</a>
@@ -98,9 +99,9 @@ https://templatemo.com/tm-506-tinker
                         </div>
                         <h4>Education</h4>
                         <div class="line-dec"></div>
-                        <p>Curabitur non risus fringilla libero accumsan molestie et quis justo. Cras aliquam tempor sem, vestibulum facilisis dui. Mauris malesuada porta.</p>
+                        <p>I am a sohpomore at MIT studying computer science and physics, with interests in a range of subjects.</p>
                         <div class="primary-blue-button">
-                            <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
+                            <a href="#">Continue Reading</a>
                         </div>
                     </div>
                 </div>
@@ -111,9 +112,9 @@ https://templatemo.com/tm-506-tinker
                         </div>
                         <h4>Northrop Grumman Machine Learning</h4>
                         <div class="line-dec"></div>
-                        <p>Do NOT re-distribute our template on any template download website. However, you can feel free to use this template for your commercial or non-commercial sites.</p>
+                        <p>In the summer of 2019 I had the pleasure to work on an amazing team at Northrop Grumman building distrubuted deep dearning systems for signals intelligence.</p>
                         <div class="primary-blue-button">
-                            <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
+                            <a href="#">Continue Reading</a>
                         </div>
                     </div>
                 </div>
@@ -124,9 +125,9 @@ https://templatemo.com/tm-506-tinker
                         </div>
                         <h4>MIT Consulting Group</h4>
                         <div class="line-dec"></div>
-                        <p>Feel free to talk to us on our Facebook page if you have any kind of question or suggestion. Sed tempor mi quis rhoncus convallis.</p>
+                        <p>I have been consulting for MCG since my freshman year, working with companies small and large!</p>
                         <div class="primary-blue-button">
-                            <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
+                            <a href="#">Continue Reading</a>
                         </div>
                     </div>
                 </div>
@@ -137,9 +138,9 @@ https://templatemo.com/tm-506-tinker
                         </div>
                         <h4>MIT Computational Reactor Physics Group</h4>
                         <div class="line-dec"></div>
-                        <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent viverra, nunc et mollis fermentum.</p>
+                        <p>My freshman year in college I worked with the CRPG to write unit and regression tests for reactor code. What's cooler than simulating nuclear physics?</p>
                         <div class="primary-blue-button">
-                            <a href="#" class="scroll-link" data-id="portfolio">Continue Reading</a>
+                            <a href="#">Continue Reading</a>
                         </div>
                     </div>
                 </div>
@@ -155,7 +156,7 @@ https://templatemo.com/tm-506-tinker
                         <div class="section-heading">
                             <h4>Portfolio</h4>
                             <div class="line-dec"></div>
-                            <p>Collection of all my projects.</p>
+                            <p>A collection of all my projects.</p>
                             <ul class="tabs clearfix" data-tabgroup="first-tab-group">
                                 <li><a href="#tab1" class="active">Quantum Thermodynamics</a></li>
                                 <li><a href="#tab2">Machine Learning Projects</a></li>
@@ -213,14 +214,14 @@ https://templatemo.com/tm-506-tinker
                         <div class="section-heading">
                             <h4>My Gallery</h4>
                             <div class="line-dec"></div>
-                            <p>A photobook from my travels and life! I love nature and storytelling.</p>
+                            <p>Some pictures from life and travels.</p>
                             <div class="filter-categories">
                                 <ul class="project-filter">
                                     <li class="filter" data-filter="all"><span>Show All</span></li>
-                                    <li class="filter" data-filter="branding"><span>Branding</span></li>
-                                    <li class="filter" data-filter="graphic"><span>Graphic</span></li>
+                                    <li class="filter" data-filter="places"><span>Places</span></li>
+                                    <li class="filter" data-filter="people"><span>People</span></li>
                                     <li class="filter" data-filter="nature"><span>Nature</span></li>
-                                    <li class="filter" data-filter="animation"><span>Animation</span></li>
+                                    <li class="filter" data-filter="phenomena"><span>Phenomena</span></li>
                                 </ul>
                             </div>
                         </div>
@@ -232,42 +233,42 @@ https://templatemo.com/tm-506-tinker
                                     <div class="col-md-6 col-sm-6 project-item mix nature">
                                       <div class="thumb">
                                             <div class="image">
-                                                <a href="img/1800rockymountaingoats.JPG" data-lightbox="image-1"><img src="img/385rockymountaingoats.JPG"></a>
+                                                <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img src="toedit/300rockymountaingoats.JPG"></a>
                                             </div>
                                       </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix animation">
+                                    <div class="col-md-6 col-sm-6 project-item mix places phenomena">
                                       <div class="thumb">
                                         <div class="image">
-                                                <a href="img/portfolio_big_item_02.jpg" data-lightbox="image-1"><img src="img/portfolio_item_02.jpg"></a>
+                                                <a href="toedit/MITSunset.JPG" data-lightbox="image-1"><img src="toedit/300MITSunset.JPG"></a>
                                             </div>
                                       </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix branding">
+                                    <div class="col-md-6 col-sm-6 project-item mix people">
                                       <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_03.jpg" data-lightbox="image-1"><img src="img/portfolio_item_03.jpg"></a>
+                                                <a href="toedit/bluehead.JPG" data-lightbox="image-1"><img src="toedit/300bluehead.JPG"></a>
                                             </div>
                                       </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix graphic nature">
+                                    <div class="col-md-6 col-sm-6 project-item mix nature phenomena">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_04.jpg" data-lightbox="image-1"><img src="img/portfolio_item_04.jpg"></a>
+                                                <a href="toedit/snowyrockies.JPG" data-lightbox="image-1"><img src="toedit/300snowyrockies.JPG"></a>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix branding">
+                                    <div class="col-md-6 col-sm-6 project-item mix nature phenomena">
                                       <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_05.jpg" data-lightbox="image-1"><img src="img/portfolio_item_05.jpg"></a>
+                                                <a href="toedit/shenansunset.JPG" data-lightbox="image-1"><img src="toedit/300shenansunset.JPG"></a>
                                             </div>
                                       </div>
                                     </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix graphic animation">
+                                    <div class="col-md-6 col-sm-6 project-item mix places phenomena">
                                         <div class="thumb">
                                             <div class="image">
-                                                <a href="img/portfolio_big_item_06.jpg" data-lightbox="image-1"><img src="img/portfolio_item_06.jpg"></a>
+                                                <a href="toedit/acadialighthouse.JPG" data-lightbox="image-1"><img src="toedit/300acadialighthouse.JPG"></a>
                                             </div>
                                         </div>
                                     </div>
