--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-506-tinker
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#" class="scroll-top">Home</a></li>
-                        <li><a href="#" class="scroll-link" data-id="resume">Resume</a></li>
+                        <li><a href="assets/Lares_Resume.pdf">Resume</a></li>
                         <li><a href="#" class="scroll-link" data-id="experience">Experience</a></li>
                         <li><a href="#" class="scroll-link" data-id="portfolio">Portfolio</a></li>
                         <li><a href="#" class="scroll-link" data-id="photography">Photography</a></li>
@@ -100,8 +100,8 @@ https://templatemo.com/tm-506-tinker
                         <h4>Education</h4>
                         <div class="line-dec"></div>
                         <p>I am a sohpomore at MIT studying computer science and physics, with interests in a range of subjects.</p>
-                        <div class="primary-blue-button">
-                            <a href="#">Continue Reading</a>
+                        <div class="primary-white-button">
+                            <a href="experiencepage.html">Continue Reading</a>
                         </div>
                     </div>
                 </div>
@@ -112,9 +112,9 @@ https://templatemo.com/tm-506-tinker
                         </div>
                         <h4>Northrop Grumman Machine Learning</h4>
                         <div class="line-dec"></div>
-                        <p>In the summer of 2019 I had the pleasure to work on an amazing team at Northrop Grumman building distrubuted deep dearning systems for signals intelligence.</p>
-                        <div class="primary-blue-button">
-                            <a href="#">Continue Reading</a>
+                        <p>In the summer of 2019 I had the pleasure to work on an amazing team at Northrop Grumman building distrubuted deep learning systems for signals intelligence.</p>
+                        <div class="primary-white-button">
+                            <a href="experiencepage.html">Continue Reading</a>
                         </div>
                     </div>
                 </div>
@@ -125,9 +125,9 @@ https://templatemo.com/tm-506-tinker
                         </div>
                         <h4>MIT Consulting Group</h4>
                         <div class="line-dec"></div>
-                        <p>I have been consulting for MCG since my freshman year, working with companies small and large!</p>
-                        <div class="primary-blue-button">
-                            <a href="#">Continue Reading</a>
+                        <p>I have been consulting for MCG since my freshman year, working with companies small and large.</p>
+                        <div class="primary-white-button">
+                            <a href="experiencepage.html">Continue Reading</a>
                         </div>
                     </div>
                 </div>
@@ -139,8 +139,8 @@ https://templatemo.com/tm-506-tinker
                         <h4>MIT Computational Reactor Physics Group</h4>
                         <div class="line-dec"></div>
                         <p>My freshman year in college I worked with the CRPG to write unit and regression tests for reactor code. What's cooler than simulating nuclear physics?</p>
-                        <div class="primary-blue-button">
-                            <a href="#">Continue Reading</a>
+                        <div class="primary-white-button">
+                            <a href="experiencepage.html">Continue Reading</a>
                         </div>
                     </div>
                 </div>
