Touched up formatting issues

--- a/index.html
+++ b/index.html
@@ -69,22 +69,20 @@ https://templatemo.com/tm-506-tinker
         </div>
     </div>
 
-    <section id="about" class="page-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <p>About Me:</p>
-                    <p><span>(links to more info)</span></p>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a>MIT Sophomore</a>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a>Computer Science</a>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <a>Physics</a>
-                </div>
+    <section id="about">
+        <div class="row">
+            <div class="aboutbox">
+                <p>About Me:</p>
+                <p><span>(links to more info)</span></p>
+            </div>
+            <div class="aboutbox">
+                <div class = "aboutBoxLink"><a>Who am I?</a></div>
+            </div>
+            <div class="aboutbox">
+                <div class = "aboutBoxLink"><a>Computer Science</a></div>
+            </div>
+            <div class="aboutbox">
+                <div class = "aboutBoxLink"><a>Physics</a></div>
             </div>
         </div>
     </section>
